@@ -1,22 +1,0 @@
-# Contributor: Rorschach <r0rschach@lavabit.com>
-# Contributor: Andrew Kravchuk <awkravchuk@gmail.com>
-
-pkgname=archup
-pkgver=1.4
-pkgrel=1
-pkgdesc="Small and lightweight update-notifier for archlinux."
-url="http://www.nongnu.org/archup"
-arch=('i686' 'x86_64')
-license="GPL"
-depends=('pacman' 'libnotify')
-makedepends=('libnotify' 'autoconf' 'gzip')
-source=(https://github.com/downloads/lockie/archup/$pkgname-$pkgver.tar.gz)
-md5sums=('9c74accf30e5766633d472d623885f02')
-
-build() {
-	cd $pkgname-$pkgver/src
-	autoconf || return 1
-	./configure || return 1
-	make || return 1
-	make DESTDIR=$pkgdir install
-}
