@@ -1,0 +1,7 @@
+# Thanks to Rorschach <r0rschach@lavabit.com>
+
+This is a slightly modified version of the original Archup updater from 
+Rorschach.
+It is created for JetSpace.
+
+More details in src/README
