@@ -13,7 +13,7 @@ dnl
 dnl You should have received a copy of the GNU General Public License
 dnl along with this program.  If not, see <http://www.gnu.org/licenses/>. 
 
-AC_INIT(archup.c)
+AC_INIT(jetup.c)
 
 AC_PREREQ(2.65)
             
